--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
       <div id="rectangle1" ></div>
 
-      <div id="rectangle" ></div>
+      <div id="rectangle" ><p1 align=center>terminal kirper</p1></div>
 
-      <p1 align=center>terminal kirper</p1>
+
 
 
     <script src="./main.js"></script>
