--- a/2/detroit.html
+++ b/2/detroit.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Dog market</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,20 +10,23 @@
     <link href="./style.css" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <div class="banner">
-        <ul>
-          <li><a href="#" class='highlight'>продукты</a></li>
-          <li><a href="#">о нас</a></li>
-          <li><a href="#"><img class='cart' src="./cart.svg"></a></li>
-        </ul>
-      </div>
-    </header>
+
     <div class= "box panel" id='panel' align=left>
       <table align=center>
-        <td><img class="logo" src="./logo.svg"></td>
-        <td><logop><b>Detroit shop</b></logop></td>
-
+        <tr>
+          <th><img class="logo" src="./logo.svg">
+          <logop><b>Detroit shop</b></logop></th>
+        </tr>
+        <tr>
+          <td><header>
+            <div class="banner">
+                <li><a href="#" class='highlight'>продукты</a></li>
+                <li><a href="#">о нас</a></li>
+                <li><a href="#"><img class='cart' src="./cart.svg"></a></li>
+              </ul>
+            </div>
+          </header></td>
+        </tr>
 
       </table>
 
@@ -54,7 +58,7 @@
 
       <div class="box tov">
         <img src="товары/4.jpg" class="tovar" >
-        <p>buisness suit "gentleman style"</p>
+        <p>buisness suit "gentleman"</p>
         <dol>17$</dol>
         </div>
 
@@ -73,7 +77,7 @@
       </div>
       <div class="box tov">
         <img src="товары/4.jpg" class="tovar" >
-        <p>buisness suit "gentleman style"</p>
+        <p>buisness suit "gentleman"</p>
         <dol>17$</dol>
         </div>
 
@@ -82,19 +86,14 @@
         <p>kurtka "detroid black"</p>
         <dol>20$</dol>
 
-      </div>
-      <div class="box tov">
-        <img src="товары/4.jpg" class="tovar" >
-        <p>buisness suit "gentleman style"</p>
-        <dol>17$</dol>
-        </div>
+
 
 
 
 
       </div>
     </div>
-
+    <p><p1>make by kirper</p1></p>
     <script src='./main.js'></script>
   </body>
 </html>
